--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ set( OpenCV_FOUND 1 )
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 #-----------compilation step
-add_executable( robo_posture.exe segment.cpp math_fct.cpp )
+add_executable( robo_posture.exe segment.cpp math_fct.cpp custom.cpp )
 set(CMAKE_BUILD_TYPE Debug)
 #-----------linking step
 target_link_libraries( robo_posture.exe ${OpenCV_LIBS} )
